--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@testing-library/react": "14.0.0",
     "@types/jest": "^29.4.0",
     "@types/js-cookie": "^3.0.6",
+    "@types/lodash": "^4.17.13",
     "@types/node": "18.14.2",
     "@types/react": "^18.2.25",
     "@types/react-dom": "18.2.9",
@@ -55,6 +56,7 @@
     "typescript": "~5.1.3"
   },
   "dependencies": {
+    "@ant-design/icons": "4.3.0",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-icons": "^1.3.0",
@@ -64,9 +66,6 @@
     "add": "^2.0.6",
     "antd": "^5.13.3",
     "antd-img-crop": "^4.21.0",
-    "@ant-design/icons": "4.3.0",
-
-
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
