--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-floating-whatsapp": "^5.0.8",
     "react-froala-wysiwyg": "^4.1.4",
     "react-hook-form": "^7.50.0",
     "react-phone-input-2": "^2.15.1",
